# gpu-mem-management

./: CMakeLists.txt  Makefile  README.md  test.cu
src/: allocator.cu  allocator.cuh
test/: allocator_test.cu
